<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistroProductoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_nombre_producto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_fecha_recepcion"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_codigo_producto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_cantidad_producto"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_stock_min_producto"
            android:inputType="number" />

        <EditText
            android:id="@+id/campo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_categoria_producto"
            android:inputType="textPersonName" />

        <ListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_precio_uni_producto"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/text_obs_producto"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:onClick="Anterior"
            android:text="@string/btn_text_volver" />
    </LinearLayout>

</LinearLayout>